--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -290,19 +290,33 @@ a,a:hover,a:active, a:visited{
   width: 3.75rem;
   margin: 0 auto;
 }
-
 .Section {
   position: relative;
   border: 0;
-  section {
+  .rh5v-DefaultPlayer_component  {
     position: initial !important;
+    width: 100%;
+    height: 100%;
     video {
       object-fit: fill;
     }
   }
 }
+.Section > div {
+  width: 100%;
+  height: 100%;
+}
 .Navigation {
   a {
     background: #fff !important;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .Section {
+    .rh5v-DefaultPlayer_component  {
+      video {
+        object-fit: contain;
+      }
+    }
   }
 }
