--- a/src/routes/Home/TraHome/assets/TraHome.scss
+++ b/src/routes/Home/TraHome/assets/TraHome.scss
@@ -168,57 +168,155 @@
     top: 0px;
     z-index: 0;
   }
-  .notice {
+  .noticeRemind {
+    width: getRem(126);
+    height: getRem(197);
     position: fixed;
-    width: 100%;
-    margin: 15% auto;
-    top: 0;
-    z-index: 1;
-    .contentText {
-      width: getRem(600);
-      height: getRem(550);
-      background: #fff;
-      margin: 0 auto;
+    right: getRem(73);
+    bottom: getRem(199);
+    z-index: 999;
+    .noticeRemind01, .noticeRemind02 {
+      display: block;
+      width: getRem(120);
+      height: getRem(110);
+      background: url('../assets/noticeRemind01.png') no-repeat;
+    }
+    .noticeRemind02 {
+      margin-top: getRem(5);
+      background: url('../assets/noticeRemind02.png') no-repeat;
+    }
+    .notice {
       position: relative;
-      padding: getRem(20) getRem(50);
-      color: #333333;
-      img {
-        width: getRem(50);
-        height: getRem(50);
-        display: block;
-        position: absolute;
-        top: 0;
-        right: 0;
-        z-index: 99;
-        cursor: pointer;
-      }
-      h1 {
-        margin-top: getRem(20);
-        margin-bottom: getRem(20);
-        font-size: getRem(20);
-        text-align: center;
-      }
-      p {
-        margin-top: getRem(20);
-        font-size: getRem(16);
-        text-align: center;
-        line-height: getRem(30);
-        border: 0;
-        width: 100%;
-        text-indent: 2em;
-        text-align: justify;
-      }
-      span {
-        margin-top: getRem(20);
-        display: block;
-        text-align: right;
+      width: 100%;
+      margin: 0 auto;
+      top: getRem(-552);
+      left: getRem(-620);
+      z-index: 1;
+      .contentText {
+        width: getRem(600);
+        height: getRem(550);
+        background: #fff;
+        margin: 0 auto;
+        position: relative;
+        padding: getRem(20) getRem(50);
+        color: #333333;
+        img {
+          width: getRem(50);
+          height: getRem(50);
+          display: block;
+          position: absolute;
+          top: 0;
+          right: 0;
+          z-index: 99;
+          cursor: pointer;
+        }
+        h1 {
+          margin-top: getRem(20);
+          margin-bottom: getRem(20);
+          font-size: getRem(20);
+          text-align: center;
+        }
+        p {
+          margin-top: getRem(20);
+          font-size: getRem(16);
+          text-align: center;
+          line-height: getRem(30);
+          border: 0;
+          width: 100%;
+          text-indent: 2em;
+          text-align: justify;
+        }
+        span {
+          margin-top: getRem(20);
+          display: block;
+          text-align: right;
+        }
+        .noticeA {
+          position: absolute;
+          display: block;
+          top: getRem(50);
+          width: getRem(600);
+          height: getRem(500);
+          left: 0;
+          right: 0;
+        }
       }
     }
   }
   @media only screen and (max-width: 480px) {
-    .notice {
-      .contentText {
-        height: getRem(750);
+    .noticeRemind {
+      width: getRem(126);
+      height: getRem(197);
+      position: fixed;
+      right: getRem(140);
+      top: getRem(100);
+      z-index: 999;
+      .noticeRemind01, .noticeRemind02 {
+        display: block;
+        width: getRem(220);
+        height: getRem(180);
+        background: url('../assets/noticeRemind01.png') no-repeat;
+      }
+      .noticeRemind02 {
+        margin-top: getRem(5);
+        background: url('../assets/noticeRemind02.png') no-repeat;
+      }
+      .notice {
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+        top: getRem(48);
+        left: getRem(-420);
+        z-index: 1;
+        .contentText {
+          width: getRem(600);
+          height: getRem(750);
+          background: #fff;
+          margin: 0 auto;
+          position: relative;
+          padding: getRem(20) getRem(50);
+          color: #333333;
+          img {
+            width: getRem(50);
+            height: getRem(50);
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0;
+            z-index: 99;
+            cursor: pointer;
+          }
+          h1 {
+            margin-top: getRem(20);
+            margin-bottom: getRem(20);
+            font-size: getRem(20);
+            text-align: center;
+          }
+          p {
+            margin-top: getRem(20);
+            font-size: getRem(16);
+            text-align: center;
+            line-height: getRem(30);
+            border: 0;
+            width: 100%;
+            text-indent: 2em;
+            text-align: justify;
+          }
+          span {
+            margin-top: getRem(20);
+            display: block;
+            text-align: right;
+          }
+          .noticeA {
+            position: absolute;
+            display: block;
+            top: getRem(50);
+            width: getRem(600);
+            height: getRem(700);
+            left: 0;
+            right: 0;
+          }
+        }
       }
     }
     article {
